--- a/index.html
+++ b/index.html
@@ -32,12 +32,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>ABOUT</p>
   </a>
   <a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-eye w3-xxlarge"></i>
+    <i class="glyphicon glyphicon-education"></i>
     <p>EDUCATION</p>
 	
 	  <a href="#pubs" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fa fa-eye w3-xxlarge"></i>
+    <i class="fas fa-book-open"></i>
     <p>PUBLICATIONS</p>
+	
+		fab fa-twitter
+			  <a href="#tp" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+    <i class="fab fa-twitter"></i>
+    <p>TWITTER POSTERS</p>
 	
   </a>
 </nav>
@@ -135,7 +140,8 @@ Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network fo
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fab fa-twitter-square"></i>
+	<i class="fab fa-github-square"></i>
     <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
   </footer>
