--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
@@ -41,7 +42,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 	
 		fab fa-twitter
 			  <a href="#tp" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fab fa-twitter"></i>
+    <i class="fa fa-twitter"></i>
     <p>TWITTER POSTERS</p>
 	
   </a>
@@ -140,8 +141,8 @@ Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network fo
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <i class="fab fa-twitter-square"></i>
-	<i class="fab fa-github-square"></i>
+    <i class="fa fa-twitter-square"></i>
+	<i class="fa fa-github-square"></i>
     <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
   <!-- End footer -->
   </footer>
