--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
@@ -33,11 +32,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>ABOUT</p>
   </a>
   <a href="#education" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="glyphicon glyphicon-education"></i>
+    <i class="	fa fa-lightbulb-o"></i>
     <p>EDUCATION</p>
 	
 	  <a href="#pubs" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
-    <i class="fas fa-book-open"></i>
+    <i class="fa fa-book"></i>
     <p>PUBLICATIONS</p>
 	
 		fab fa-twitter
