--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>PUBLICATIONS</p>
 	
 
-			  <a href="#tp" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+			  <a href="#twitter_posters" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-twitter w3-xlarge"></i>
     <p>TWITTER POSTERS</p>
 	
@@ -141,6 +141,28 @@ Chandler M, Sprintall J, Zilberman N. Towards a basin-scale observing network fo
 
 </div>
 
+
+
+
+
+
+<!-- Twitter Posters -->
+<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="twitter_posters">
+
+<h2>Twitter Posters</h2>
+<p>
+Twitter posters were brought to my attention by Mike Morrison and were conceived as an alternative to conferences which were postponed and cancelled as a result of the covid-19 pandemic. These Twitter Posters are intended to be a relatively low effort (after all you have already done the hard work of conducting your research!) way of communicating science to a wider group of people using GIFs to present a series of simple slides on twitter. For more information about Twitter Posters see Mike's youtube video (<a href="https://www.youtube.com/watch?v=fQDL8r3r_d4">LINK</a>), where he also provides templates to create your own!
+</p>
+
+<p>
+I have taken to making Twitter Posters for my peer-reviewed research as a way of quickly and simply communicating the key findings from my work to a broad audience. These Twitter Posters are all available on my twitter, and I have included direct links to each Twitter Poster below.
+</p>
+<ul>
+  <li><a href="https://twitter.com/nz_mitch_/status/1366896057016217601">Fiordland Current (Chandler et al. 2019)</a></li>
+</ul>
+<IMG SRC="FC_2021.gif">
+
+</div>
 
   
     <!-- Footer -->
